add customrepository file

--- a/PRN222MVC/Services/Services.csproj
+++ b/PRN222MVC/Services/Services.csproj
@@ -12,4 +12,10 @@
     </ProjectReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Intefaces\" />
+    <Folder Include="Implements\" />
+    <Folder Include="Helper\" />
+  </ItemGroup>
+
 </Project>
