--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/ElectricVehicleDealerManagermentSystem.csproj
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/ElectricVehicleDealerManagermentSystem.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BuisnessObject\BusinessObject.csproj" />
     <ProjectReference Include="..\Services\Services.csproj">
       <Private>True</Private>
     </ProjectReference>
