--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/ElectricVehicleDealerManagermentSystem.csproj
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/ElectricVehicleDealerManagermentSystem.csproj
@@ -13,4 +13,9 @@
     </ProjectReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2" />
+  </ItemGroup>
+
 </Project>
