--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/appsettings.json
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/appsettings.json
@@ -10,5 +10,12 @@
     "DefaultConnection": "Server=localhost;uid=sa;pwd=12345;database=PRN222ASM1;TrustServerCertificate=True"
   },
 
+  "Jwt": {
+    "Key": "ThisIsASecureKeyWithAtLeast32Characters123!@#",
+    "Issuer": "http://localhost:5000",
+    "Audience": "http://localhost:5000"
+  },
+
+
   "AllowedHosts": "*"
 }
