update vehicle and category UI, add view inventory

--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/appsettings.json
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/appsettings.json
@@ -7,15 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=PRN222ASM1;User Id=sa;Password=12345;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=PRN222ASM1;User Id=sa;Password=12345;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
 
   "Jwt": {
     "Key": "ThisIsASecureKeyWithAtLeast32Characters123!@#",
     "Issuer": "http://localhost:5000",
     "Audience": "http://localhost:5000"
-  },
+  }
 
-
-  "AllowedHosts": "*"
 }
