--- a/PRN222MVC/BuisnessObject/BusinessObject.csproj
+++ b/PRN222MVC/BuisnessObject/BusinessObject.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="BusinessObject\DealerModels\Request\" />
+  </ItemGroup>
+
 </Project>
